Bug 127476 - Printing as very very slow
Summary: Printing as very very slow
Status: RESOLVED FIXED
Alias: None
Product: digikam
Classification: Applications
Component: Plugin-Generic-PrintCreator (other bugs)
Version First Reported In: unspecified
Platform: Mandriva RPMs Linux
: NOR normal
Target Milestone: ---
Assignee: Digikam Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2006-05-16 22:51 UTC by Adam Pigg
Modified: 2017-07-22 16:01 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.7.0
Sentry Crash Report:


Attachments
patch to launch kjobviewer (67.94 KB, patch)
2006-11-07 23:42 UTC, Angelo Naselli
Details
patch to launch kjobviewer (67.94 KB, patch)
2006-11-07 23:44 UTC, Angelo Naselli
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam Pigg 2006-05-16 22:51:51 UTC
Version:           0.1.0 rc2 (using KDE KDE 3.5.2)
Installed from:    Mandriva RPMs
Compiler:          Target: i586-mandriva-linux-gnu
OS:                Linux (i686) release 2.6.17-rc4.19mdk

Im trying to print several photos from an album per page (as you would)

My photos are 2816x2112 from a 6mp camera.

Printing 5 pages of thumbnails causes a very long delay between printing and the final output.

Initially digikam is creating the pages, then when the job is transferred to the print server, top shows gs running at >90%.  Probably 30-60 minutes later the print will start, but with delays between pages.

Cups is 1.2

Printer is a HP desktop 5550 connected via usb using hpijs driver.

Print server machine has 512mb ram and 1ghz cpu

I think the problem also occurs when printing form the print server machine.

In comparison, gnome-photo-printer is almost instantanious, but it has no options for adjusting the print quality.

Cheers

PiggZ
Comment 1 Angelo Naselli 2006-11-07 23:42:31 UTC
Created attachment 18464 [details]
patch to launch kjobviewer

Hi, 
I have the same experience, I'm not sure if it is related to hp printers or
not, but as it is in printing pdf -I believe there is another bug for that- we
cannot understand what is happening when we click on finish, after the job has
finished. I don't like telling my mom that i don't know what the system is
doing, and running "ps" or "top" to understand it, so here is a patch that
workarounds the problem by running kjobviewer (if enabled) to monitor the
printer queue.
Comment 2 Angelo Naselli 2006-11-07 23:44:51 UTC
Created attachment 18465 [details]
patch to launch kjobviewer

Hi, 
I have the same experience, I'm not sure if it is related to hp printers or
not, but as it is in printing pdf -I believe there is another bug for that- we
cannot understand what is happening when we click on finish, after the job has
finished. I don't like telling my mom that i don't know what the system is
doing, and running "ps" or "top" to understand it, so here is a patch that
workarounds the problem by running kjobviewer (if enabled) to monitor the
printer queue.
Comment 3 Angelo Naselli 2006-11-12 21:34:17 UTC
Comment on attachment 18464 [details]
patch to launch kjobviewer

sent two times
Comment 4 Angelo Naselli 2006-11-12 21:41:50 UTC
SVN commit 604435 by anaselli:

Added a workaround to allow user to understand what's happening looking at kjobviewer.
 
BUG: 127476

 M  +20 -0     frmprintwizard.cpp  
 M  +2 -1      frmprintwizard.h  
 M  +156 -115  frmprintwizardbase.ui  
Comment 5 caulier.gilles 2017-07-12 13:33:54 UTC
Git commit a286d2d6db9998c2c46deec1c030d8773fe90029 by Gilles Caulier.
Committed on 12/07/2017 at 13:29.
Pushed by cgilles into branch 'master'.

Print Creator : Use a separated thread to process all final printing operations.
This will prevent to block GUI for a while and permit to use another CPU core to compute printing.
Related: bug 117670, bug 116149
FIXED-IN: 5.7.0

M  +13   -5    utilities/assistants/printcreator/manager/advprinttask.cpp
M  +12   -12   utilities/assistants/printcreator/manager/advprinttask.h
M  +1    -1    utilities/assistants/printcreator/manager/advprintthread.cpp
M  +1    -1    utilities/assistants/printcreator/manager/advprintthread.h
M  +72   -505  utilities/assistants/printcreator/wizard/advprintfinalpage.cpp
M  +4    -20   utilities/assistants/printcreator/wizard/advprintfinalpage.h
M  +99   -137  utilities/assistants/printcreator/wizard/advprintwizard.cpp
M  +2    -6    utilities/assistants/printcreator/wizard/advprintwizard.h

https://commits.kde.org/digikam/a286d2d6db9998c2c46deec1c030d8773fe90029
Comment 6 caulier.gilles 2017-07-13 10:52:28 UTC
Git commit c6b8d64836622a71812448c13849d7bd46ce49a1 by Gilles Caulier.
Committed on 13/07/2017 at 10:49.
Pushed by cgilles into branch 'master'.

use a separated thread to render layout page preview.
This will speed up preview rendering when page layout contains many image to print.
This will not freeze GUI will rendering, of course.
Related: bug 117670

M  +2    -2    utilities/assistants/printcreator/manager/advprintsettings.cpp
M  +2    -1    utilities/assistants/printcreator/manager/advprintsettings.h
M  +55   -13   utilities/assistants/printcreator/manager/advprinttask.cpp
M  +26   -13   utilities/assistants/printcreator/manager/advprinttask.h
M  +24   -1    utilities/assistants/printcreator/manager/advprintthread.cpp
M  +2    -0    utilities/assistants/printcreator/manager/advprintthread.h
M  +2    -1    utilities/assistants/printcreator/tools/templateicon.cpp
M  +3    -0    utilities/assistants/printcreator/wizard/advprintfinalpage.cpp
M  +6    -2    utilities/assistants/printcreator/wizard/advprintphotopage.cpp
M  +34   -26   utilities/assistants/printcreator/wizard/advprintwizard.cpp
M  +6    -5    utilities/assistants/printcreator/wizard/advprintwizard.h

https://commits.kde.org/digikam/c6b8d64836622a71812448c13849d7bd46ce49a1
Comment 7 caulier.gilles 2017-07-17 20:52:28 UTC
Git commit eb552cedb1f2f47bcc47c5ed5172d2643c89bcb4 by Gilles Caulier.
Committed on 17/07/2017 at 20:39.
Pushed by cgilles into branch 'master'.

Crop Frame : move image loading outside the widget init to speed up computation. This divide processing time by 10
Related: bug 117670

M  +7    -20   utilities/assistants/printcreator/tools/advprintphoto.cpp
M  +2    -1    utilities/assistants/printcreator/tools/advprintphoto.h
M  +23   -94   utilities/assistants/printcreator/wizard/advprintcropframe.cpp
M  +1    -0    utilities/assistants/printcreator/wizard/advprintcropframe.h

https://commits.kde.org/digikam/eb552cedb1f2f47bcc47c5ed5172d2643c89bcb4
Comment 8 caulier.gilles 2017-07-22 16:01:21 UTC
Git commit a50822aae8d685c28a254afd2b77309cc471e521 by Gilles Caulier.
Committed on 22/07/2017 at 15:59.
Pushed by cgilles into branch 'master'.

fork images pre-processing before to print in a separated thread to not block GUI.
Related: bug 117670

M  +16   -0    utilities/assistants/printcreator/manager/advprintsettings.cpp
M  +3    -2    utilities/assistants/printcreator/manager/advprintsettings.h
M  +57   -7    utilities/assistants/printcreator/manager/advprinttask.cpp
M  +5    -2    utilities/assistants/printcreator/manager/advprinttask.h
M  +28   -2    utilities/assistants/printcreator/manager/advprintthread.cpp
M  +1    -0    utilities/assistants/printcreator/manager/advprintthread.h
M  +161  -20   utilities/assistants/printcreator/wizard/advprintfinalpage.cpp
M  +7    -0    utilities/assistants/printcreator/wizard/advprintfinalpage.h
M  +0    -15   utilities/assistants/printcreator/wizard/advprintphotopage.cpp
M  +0    -1    utilities/assistants/printcreator/wizard/advprintphotopage.h
M  +3    -133  utilities/assistants/printcreator/wizard/advprintwizard.cpp
M  +0    -2    utilities/assistants/printcreator/wizard/advprintwizard.h

https://commits.kde.org/digikam/a50822aae8d685c28a254afd2b77309cc471e521