Added a workaround to allow user to understand what's happening looking at kjobviewer.

BUG: 127476

svn path=/trunk/extragear/libs/kipi-plugins/; revision=604435